<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <TextView
        android:id="@+id/txtEnviarMedicamentoAntiPulga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Cadastro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Txt_Cadastrar_Usuario"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="Informe seu usuário :"
        android:inputType="textPersonName"
        android:text="@string/txt_Cadastrar_Usuario"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnviarMedicamentoAntiPulga" />

    <EditText
        android:id="@+id/txt_Cadastro_Nome"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="Informe seu nome :"
        android:inputType="textPersonName"
        android:text="@string/txt_Cadastrar_Nome"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnviarMedicamentoAntiPulga" />

    <EditText
        android:id="@+id/txt_Cadastro_Telefone"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="Informe seu telefone:"
        android:inputType="phone"
        android:text="@string/txt_Numero_Telefone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnviarMedicamentoAntiPulga" />

    <EditText
        android:id="@+id/txt_Cadastrat_Senhar"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:ems="10"
        android:hint="Informe sua senha  :"
        android:inputType="textPassword"
        android:text="@string/txt_Cadastrar_Senha"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnviarMedicamentoAntiPulga" />

    <EditText
        android:id="@+id/txt_Cadastrar_Senha_Repetir"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:ems="10"
        android:hint="Repita a senha :"
        android:inputType="textPassword"
        android:text="@string/txt_Cadastra_Senha_Repetir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnviarMedicamentoAntiPulga" />

    <Button
        android:id="@+id/btn_Finalizar_Cadastro"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="432dp"
        android:text="@string/btn_Finalizar_Cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnviarMedicamentoAntiPulga" />

</androidx.constraintlayout.widget.ConstraintLayout>